[gd_scene load_steps=25 format=2]

[ext_resource path="res://HUD.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://sounds/keyboard-sound-sort.mp3" type="AudioStream" id=3]
[ext_resource path="res://sounds/Stevia Sphere - Doors to Dreams - Sleeping Forest (single) - 01 Doors to Dreams.mp3" type="AudioStream" id=4]
[ext_resource path="res://Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://art/musicIcon.png" type="Texture" id=6]
[ext_resource path="res://art/notepadIcon.png" type="Texture" id=7]
[ext_resource path="res://art/rewardchest.png" type="Texture" id=8]
[ext_resource path="res://art/help.png" type="Texture" id=9]
[ext_resource path="res://art/mageHat.png" type="Texture" id=10]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0.239216 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 0.639216 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="Animation" id=5]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("highlight:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "highlight"
length = 2.0
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("highlight:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.98 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.933333 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.776471 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("highlight:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "highlight"
length = 2.0
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath("highlight:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 1.98 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.933333 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.776471 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.25098, 0.364706, 0.501961, 0.301961 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0.811765, 1, 0.247059 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Animation" id=9]
resource_name = "RESET"

[sub_resource type="Animation" id=10]
resource_name = "start"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, -20.0 ]
}

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.482353, 0.470588, 1 )

[node name="disableMusic" type="ColorRect" parent="ColorRect"]
margin_left = 11.0
margin_top = 10.0
margin_right = 69.0
margin_bottom = 77.0
color = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="ColorRect/disableMusic"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_bottom = -1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Music"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="ColorRect/disableMusic"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.0
margin_bottom = -3.0
texture = ExtResource( 6 )

[node name="musicToggle" type="Button" parent="ColorRect/disableMusic"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="codeEditor" type="ColorRect" parent="ColorRect"]
margin_left = 12.0
margin_top = 85.0
margin_right = 70.0
margin_bottom = 182.0
color = Color( 1, 1, 1, 0 )

[node name="highlight" type="ColorRect" parent="ColorRect/codeEditor"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="ColorRect/codeEditor"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -29.0
margin_top = -37.0
margin_right = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Text editor"
align = 1
valign = 1
autowrap = true

[node name="TextureRect" type="TextureRect" parent="ColorRect/codeEditor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.0
margin_bottom = -3.0
texture = ExtResource( 7 )

[node name="editorToggle" type="Button" parent="ColorRect/codeEditor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/codeEditor"]
anims/default = SubResource( 5 )
anims/highlight = SubResource( 6 )

[node name="help" type="ColorRect" parent="ColorRect"]
margin_left = 12.0
margin_top = 192.0
margin_right = 70.0
margin_bottom = 259.0
color = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="ColorRect/help"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_bottom = -1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "help"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="ColorRect/help"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.0
margin_bottom = -3.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 9 )

[node name="helpToggle" type="Button" parent="ColorRect/help"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="Reward" type="ColorRect" parent="ColorRect"]
visible = false
margin_left = 11.0
margin_top = 262.0
margin_right = 69.0
margin_bottom = 329.0
color = Color( 1, 1, 1, 0 )

[node name="highlight" type="ColorRect" parent="ColorRect/Reward"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="ColorRect/Reward"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_bottom = -1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Reward"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="ColorRect/Reward"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.0
margin_bottom = -3.0
texture = ExtResource( 8 )

[node name="rewardbtn" type="Button" parent="ColorRect/Reward"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect/Reward"]
anims/default = SubResource( 7 )
anims/highlight = SubResource( 8 )

[node name="mageHatContainer" type="ReferenceRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -66.0
margin_right = 66.0
margin_bottom = 66.0

[node name="hat" type="TextureRect" parent="ColorRect/mageHatContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="summonMage" type="Button" parent="ColorRect/mageHatContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -47.0
margin_top = -36.5
margin_right = 47.0
margin_bottom = 36.5
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 11 )

[node name="HUD" parent="." instance=ExtResource( 1 )]

[node name="countdown" type="Timer" parent="."]

[node name="effectPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="musicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -80.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="musicPlayer"]
anims/RESET = SubResource( 9 )
anims/start = SubResource( 10 )

[node name="voicePlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="ColorRect/disableMusic/musicToggle" to="." method="_on_musicToggle_pressed"]
[connection signal="pressed" from="ColorRect/codeEditor/editorToggle" to="." method="_on_editorToggle_pressed"]
[connection signal="pressed" from="ColorRect/help/helpToggle" to="." method="_on_helpToggle_pressed"]
[connection signal="pressed" from="ColorRect/Reward/rewardbtn" to="." method="_on_rewardbtn_pressed"]
[connection signal="pressed" from="ColorRect/mageHatContainer/summonMage" to="." method="_on_summonMage_pressed"]
[connection signal="keyboard" from="HUD" to="." method="_on_HUD_keyboard"]
[connection signal="nextDialogue" from="HUD" to="." method="_on_HUD_nextDialogue"]
[connection signal="submit" from="HUD" to="." method="_on_HUD_submit"]
[connection signal="timeout" from="countdown" to="." method="_on_countdown_timeout"]
